chore: upgrade app-template for mosquitto

--- a/kubernetes/cluster0/apps/home/mosquitto/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/mosquitto/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,11 +24,15 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: eclipse-mosquitto
-      tag: 2.0.18
-    env:
-      TZ: "${TIMEZONE}"
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: eclipse-mosquitto
+              tag: 2.0.18
+              env:
+                TZ: "${TIMEZONE}"
     service:
       main:
         type: LoadBalancer
@@ -47,8 +51,6 @@ spec:
       requests:
         cpu: 10m
         memory: 50Mi
-      limits:
-        memory: 150Mi
     configMaps:
       config:
         enabled: true
@@ -63,5 +65,8 @@ spec:
         enabled: true
         type: configMap
         name: mosquitto-config
-        mountPath: /mosquitto/config/mosquitto.conf
-        subPath: mosquitto.conf
+        advancedMounts:
+          main:
+            main:
+              - path: /mosquitto/config/mosquitto.conf
+                subPath: mosquitto.conf
