--- a/kubernetes/cluster0/apps/media/jellyfin/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/jellyfin/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,12 +24,26 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: jellyfin/jellyfin
-      tag: 10.8.12
-    env:
-      TZ: "${TIMEZONE}"
-      JELLYFIN_CACHE_DIR: /config/cache
+    defaultPodOptions:
+      nodeSelector:
+        intel.feature.node.kubernetes.io/gpu: "true"
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: jellyfin/jellyfin
+              tag: 10.8.12
+              env:
+                TZ: "${TIMEZONE}"
+                JELLYFIN_CACHE_DIR: /config/cache
+              resources:
+                requests:
+                  gpu.intel.com/i915: 1
+                  cpu: 100m
+                  memory: 1000Mi
+                limits:
+                  gpu.intel.com/i915: 1
     service:
       main:
         ports:
@@ -50,37 +64,42 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
+                  port: http
     persistence:
       config:
         enabled: true
-        mountPath: /config
         storageClass: longhorn
         existingClaim: pvc-jellyfin
         accessMode: ReadWriteOnce
         retain: true
+        advancedMounts:
+          main:
+            main:
+              - path: /config
       movies:
         enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/Films
-        mountPath: /movies
+        advancedMounts:
+          main:
+            main:
+              - path: /movies
       tv:
         enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/TV-Series
-        mountPath: /tv
+        advancedMounts:
+          main:
+            main:
+              - path: /tv
       transcode:
         enabled: true
         type: emptyDir
-    nodeSelector:
-      intel.feature.node.kubernetes.io/gpu: "true"
-    resources:
-      requests:
-        gpu.intel.com/i915: 1
-        cpu: 100m
-        memory: 1000Mi
-      limits:
-        gpu.intel.com/i915: 1
-        memory: 6000Mi
-
+        advancedMounts:
+          main:
+            main:
+              - path: /transcode
