--- a/kubernetes/cluster0/apps/media/lidarr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/lidarr/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,55 +24,71 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: lscr.io/linuxserver/lidarr
-      tag: 1.0.2.2592-ls101
-    env:
-      TZ: "${TIMEZONE}"
-      PUID: 0
-      PGID: 0
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: lscr.io/linuxserver/lidarr
+              tag: 1.0.2.2592-ls101
+              env:
+                TZ: "${TIMEZONE}"
+                PUID: 0
+                PGID: 0
+              # to avoid permissions issues on volume
+              securityContext:
+                runAsUser: 0
+                runAsGroup: 0
+                fsGroup: 0
     service:
       main:
         ports:
           http:
             port: 8686
     ingress:
-        main:
-          enabled: true
-          ingressClassName: "traefik"
-          annotations:
-            hajimari.io/enable: "true"
-            hajimari.io/icon: "playlist-music"
-            traefik.ingress.kubernetes.io/router.entrypoints: websecure
-            traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,lidarr-theme@file
-            external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
-            external-dns/is-public: "true"
-          hosts:
-            - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
-              paths:
-                - path: /
-                  pathType: Prefix
+      main:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "playlist-music"
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: auth-chain-authelia-auth@kubernetescrd #,lidarr-theme@file
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_PUBLIC_DOMAIN}"
+          external-dns/is-public: "true"
+        hosts:
+          - host: &host "{{ .Release.Name }}.${SECRET_PUBLIC_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  name: main
+                  port: http
     persistence:
       config:
         enabled: true
         storageClass: longhorn
         existingClaim: pvc-lidarr
-        mountPath: /config
         retain: true
+        advancedMounts:
+          main:
+            main:
+              - path: /config
       music:
         enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/Music
-        mountPath: /music
+        advancedMounts:
+          main:
+            main:
+              - path: /music
       downloads:
         enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/downloads
-        mountPath: /downloads
-    # to avoid permissions issues on volume
-    podSecurityContext:
-      runAsUser: 0
-      runAsGroup: 0
-      fsGroup: 0
+        advancedMounts:
+          main:
+            main:
+              - path: /downloads
