--- a/kubernetes/cluster0/apps/media/overseerr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/overseerr/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,12 +24,20 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: ghcr.io/sct/overseerr
-      tag: 1.33.2
-    env:
-      TZ: "${TIMEZONE}"
-      LOG_LEVEL: "info"
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: ghcr.io/sct/overseerr
+              tag: 1.33.2
+              env:
+                TZ: "${TIMEZONE}"
+                LOG_LEVEL: "info"
+              resources:
+                requests:
+                  cpu: 100m
+                  memory: 250Mi
     service:
       main:
         ports:
@@ -50,14 +58,14 @@ spec:
               paths:
                 - path: /
                   pathType: Prefix
+                  service:
+                    name: main
+                    port: http
     persistence:
       config:
         enabled: true
         existingClaim: pvc-overseerr
-        mountPath: /app/config
-    resources:
-      requests:
-        cpu: 100m
-        memory: 250Mi
-      limits:
-        memory: 500Mi
+        advancedMounts:
+          main:
+            main:
+              - path: /app/config
