--- a/kubernetes/cluster0/apps/media/sonarr/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/sonarr/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,13 +24,22 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: lscr.io/linuxserver/sonarr
-      tag: "3.0.10"
-    env:
-      TZ: "${TIMEZONE}"
-      PUID: 0
-      PGID: 0
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: lscr.io/linuxserver/sonarr
+              tag: "3.0.10"
+              env:
+                TZ: "${TIMEZONE}"
+                PUID: 0
+                PGID: 0
+              # to avoid permissions issues on volume
+              securityContext:
+                runAsUser: 0
+                runAsGroup: 0
+                fsGroup: 0
     service:
       main:
         ports:
@@ -52,27 +61,34 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
+                  port: http
     persistence:
       config:
         enabled: true
         storageClass: longhorn
         existingClaim: pvc-sonarr
-        mountPath: /config
         retain: true
+        advancedMounts:
+          main:
+            main:
+              - path: /config
       tv:
         enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/TV-Series
-        mountPath: /tv
+        advancedMounts:
+          main:
+            main:
+              - path: /tv
       downloads:
         enabled: true
         type: nfs
         server: "${NAS0_IP}"
         path: /volume1/downloads
-        mountPath: /downloads
-    # to avoid permissions issues on volume
-    podSecurityContext:
-      runAsUser: 0
-      runAsGroup: 0
-      fsGroup: 0
+        advancedMounts:
+          main:
+            main:
+              - path: /downloads
