--- a/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
@@ -23,9 +23,17 @@ spec:
   values:
     global:
       nameOverride: *app
-    image:
-      repository: syncthing/syncthing
-      tag: 1.26.0
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: syncthing/syncthing
+              tag: 1.26.0
+              resources:
+                requests:
+                  cpu: 15m
+                  memory: 249Mi
     service:
       main:
         enabled: true
@@ -61,16 +69,16 @@ spec:
       #       paths:
       #         - path: /
       #           pathType: Prefix
+      #          service:
+      #            name: main
+      #            port: http
     persistence:
       config:
         enabled: true
         storageClass: longhorn
         existingClaim: pvc-syncthing
-        mountPath: /var/syncthing
         retain: true
-    resources:
-      requests:
-        cpu: 15m
-        memory: 249Mi
-      limits:
-        memory: 1565Mi
+        advancedMounts:
+          main:
+            main:
+              - path: /var/syncthing
