controller missing on secondary service 🙄

--- a/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/media/syncthing/app/helm-release.yaml
@@ -41,6 +41,7 @@ spec:
           http:
             port: 8384
       listdisc:
+        controller: main
         enabled: true
         type: LoadBalancer
         annotations:
