--- a/kubernetes/cluster0/apps/networking/error-pages/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/error-pages/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -25,23 +25,22 @@ spec:
     remediation:
       retries: 3
   values:
-    image:
-      repository: ghcr.io/tarampampam/error-pages
-      tag: 2.25.0
-    controller:
-      replicas: 1
-    env:
-      TEMPLATE_NAME: ghost
-      SHOW_DETAILS: "false"
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: ghcr.io/tarampampam/error-pages
+              tag: 2.25.0
+              env:
+                TEMPLATE_NAME: ghost
+                SHOW_DETAILS: "false"
+              resources:
+                requests:
+                  memory: 100Mi
+                  cpu: 100m
     service:
       main:
         ports:
           http:
             port: 8080
-    resources:
-      requests:
-        memory: 100Mi
-        cpu: 100m
-      limits:
-        memory: 250Mi
-        cpu: 250m
