--- a/kubernetes/cluster0/apps/monitoring/changedetection-io/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/monitoring/changedetection-io/app/helm-release.yaml
@@ -30,7 +30,7 @@ spec:
     env:
       TZ: "${TIMEZONE}"
       USE_X_SETTINGS: 1
-      PLAYWRIGHT_DRIVER_URL: ws://changedetection-browser.default.svc.cluster.local:3000/?stealth=1&--disable-web-security=true&--user-data-dir=~/browserless-cache-123
+      PLAYWRIGHT_DRIVER_URL: ws://changedetection-browser.monitoring.svc.cluster.local:3000/?stealth=1&--disable-web-security=true&--user-data-dir=~/browserless-cache-123
     service:
       main:
         ports:
@@ -59,47 +59,3 @@ spec:
         existingClaim: pvc-changedetection-io
         mountPath: /datastore
         retain: true
-
----
-apiVersion: helm.toolkit.fluxcd.io/v2beta1
-kind: HelmRelease
-metadata:
-  name: changedetection-browser
-  namespace: default
-spec:
-  interval: 15m
-  chart:
-    spec:
-      chart: app-template
-      version: 1.5.1
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s-charts
-        namespace: flux-system
-  install:
-    createNamespace: true
-    remediation:
-      retries: 5
-  upgrade:
-    remediation:
-      retries: 5
-  values:
-    image:
-      repository: docker.io/browserless/chrome
-      tag: latest
-    env:
-      SCREEN_WIDTH: 1920
-      SCREEN_HEIGHT: 1024
-      SCREEN_DEPTH: 16
-      ENABLE_DEBUGGER: false
-      PREBOOT_CHROME: true
-      CONNECTION_TIMEOUT: 300000
-      MAX_CONCURRENT_SESSIONS: 10
-      CHROME_REFRESH_TIME: 600000
-      DEFAULT_BLOCK_ADS: true
-      DEFAULT_STEALTH: true
-    service:
-      main:
-        ports:
-          http:
-            port: 3000
