--- a/kubernetes/cluster0/apps/monitoring/changedetection-io/ks.yaml
+++ b/kubernetes/cluster0/apps/monitoring/changedetection-io/ks.yaml
@@ -2,12 +2,34 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
+  name: cluster-apps-changedetection-io-browser
+  namespace: flux-system
+spec:
+  path: ./kubernetes/cluster0/apps/monitoring/changedetection-io/app
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: home-ops-cluster0
+  healthChecks:
+    - apiVersion: helm.toolkit.fluxcd.io/v2beta1
+      kind: HelmRelease
+      name: changedetection-io-browser
+      namespace: monitoring
+  interval: 30m
+  retryInterval: 1m
+  timeout: 3m
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
   name: cluster-apps-changedetection-io
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-apps-longhorn
     - name: cluster-apps-traefik
+    - name: cluster-apps-changedetection-io-browser
   path: ./kubernetes/cluster0/apps/monitoring/changedetection-io/app
   prune: true
   sourceRef:
