--- a/kubernetes/cluster0/apps/monitoring/changedetection-io/ks.yaml
+++ b/kubernetes/cluster0/apps/monitoring/changedetection-io/ks.yaml
@@ -13,7 +13,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: changedetection-io-browser
+      name: changedetection-browser
       namespace: monitoring
   interval: 30m
   retryInterval: 1m
