--- a/kubernetes/cluster0/apps/monitoring/uptime-kuma/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/monitoring/uptime-kuma/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,13 +24,17 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: louislam/uptime-kuma
-      tag: "latest"
-    env:
-      TZ: "${TIMEZONE}"
-      UPTIME_KUMA_PORT: 3001
-      UPTIME_KUMA_DISABLE_FRAME_SAMEORIGIN: 0
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: louislam/uptime-kuma
+              tag: "latest"
+              env:
+                TZ: "${TIMEZONE}"
+                UPTIME_KUMA_PORT: 3001
+                UPTIME_KUMA_DISABLE_FRAME_SAMEORIGIN: 0
     service:
       main:
         ports:
@@ -51,10 +55,16 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
+                  port: http
     persistence:
       config:
         enabled: true
         storageClass: longhorn
         existingClaim: pvc-uptime-kuma
-        mountPath: /app/data
         retain: true
+        advancedMounts:
+          main:
+            main:
+              - path: /app/data
