--- a/kubernetes/cluster0/apps/home/zigbee2mqtt/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/home/zigbee2mqtt/app/helm-release.yaml
@@ -12,7 +12,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 1.5.1
+      version: 2.1.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -24,14 +24,18 @@ spec:
     remediation:
       retries: 5
   values:
-    image:
-      repository: ghcr.io/koenkk/zigbee2mqtt
-      tag: 1.33.2
-    env:
-      TZ: "${TIMEZONE}"
-      ZIGBEE2MQTT_DATA: /data
-    securityContext:
-      privileged: true
+    controllers:
+      main:
+        containers:
+          main:
+            image:
+              repository: ghcr.io/koenkk/zigbee2mqtt
+              tag: 1.33.2
+              env:
+                TZ: "${TIMEZONE}"
+                ZIGBEE2MQTT_DATA: /data
+              securityContext:
+                privileged: true
     service:
       main:
         ports:
@@ -51,38 +55,52 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+                service:
+                  name: main
+                  port: http
     persistence:
       # config:
       #   enabled: true
       #   type: "custom"
-      #   mountPath: "/app/data/configuration.yaml"
-      #   subPath: "configuration.yaml"
       #   volumeSpec:
       #     configMap:
       #       name: zigbee2mqtt-settings
+      #  advancedMounts:
+      #    main:
+      #      main:
+      #        - path: /app/data/configuration.yaml"
+      #          subPath: "configuration.yaml"
       data:
         enabled: true
         storageClass: longhorn
         existingClaim: pvc-zigbee2mqtt
         accessMode: ReadWriteOnce
         size: 1Gi
-        mountPath: /data
         retain: true
+        advancedMounts:
+          main:
+            main:
+              - path: /data
       usb:
         enabled: true
         type: hostPath
         hostPath: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2490275-if00
-    affinity:
-      nodeAffinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
-          # note: label node like this 
-          # kubectl label nodes k3s-agent5 app=zigbee-controller
-          - matchExpressions:
-            - key: app
-              operator: In
-              values:
-              - zigbee-controller
+        advancedMounts:
+          main:
+            main:
+            - path: /dev/serial/by-id/usb-dresden_elektronik_ingenieurtechnik_GmbH_ConBee_II_DE2490275-if00
+    defaultPodOptions:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+            # note: label node like this 
+            # kubectl label nodes k3s-agent5 app=zigbee-controller
+            - matchExpressions:
+              - key: app
+                operator: In
+                values:
+                - zigbee-controller
 
  # !!! note to future ben, or anyone else !!!
  # trying to get the ConBee to appear as a readable ttyACM0 interface is a nightmare
