--- a/kubernetes/cluster0/apps/networking/external-dns/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/networking/external-dns/app/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./helm-release.yaml
   - ./secret.sops.yaml
+  - ./dnsendpoint-crd.yaml
 labels:
   - pairs:
       app.kubernetes.io/name: external-dns
