--- a/kubernetes/cluster0/apps/networking/cloudflared/app/dns-endpoint.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/dns-endpoint.yaml
@@ -3,6 +3,7 @@ apiVersion: externaldns.k8s.io/v1alpha1
 kind: DNSEndpoint
 metadata:
   name: cloudflared-tunnel
+  namespace: networking
 spec:
   endpoints:
     - dnsName: tun.${SECRET_PUBLIC_DOMAIN}
