--- a/kubernetes/cluster0/apps/networking/kustomization.yaml
+++ b/kubernetes/cluster0/apps/networking/kustomization.yaml
@@ -10,5 +10,5 @@ resources:
   - ./external-dns/ks.yaml
   - ./traefik/ks.yaml
   - ./error-pages/ks.yaml
-  - ./metallb/ks.yaml
+  # - ./metallb/ks.yaml
   # - ./cloudflared/ks.yaml
