yeah nah didn't think so

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
     bpf:
       masquerade: true
     bgp:
-      enabled: true
+      enabled: false
       announce:
         loadbalancerIP: true
     cluster:
