--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -29,8 +29,8 @@ spec:
       enabled: true
       type: LoadBalancer
       annotations:
-        io.cilium/lb-ipam-ips: ${TRAEFIK_IP}
-        # metallb.universe.tf/loadBalancerIPs: ${TRAEFIK_IP}
+        # io.cilium/lb-ipam-ips: ${TRAEFIK_IP}
+        metallb.universe.tf/loadBalancerIPs: ${TRAEFIK_IP}
     tlsStore:
       default:
         defaultCertificate:
