--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -10,7 +10,7 @@ spec:
   chart:
     spec:
       chart: cilium
-      version: 1.15.3
+      version: 1.15.2
       sourceRef:
         kind: HelmRepository
         name: cilium
@@ -34,6 +34,8 @@ spec:
       masquerade: true
     bgp:
       enabled: false
+      announce:
+        loadbalancerIP: true
     cluster:
       name: ${CLUSTER_NAME}
       id: 1
@@ -90,7 +92,7 @@ spec:
     kubeProxyReplacement: true
     kubeProxyReplacementHealthzBindAddr: 0.0.0.0:10256
     l2announcements:
-      enabled: false # only works with bgp which unifi doesnt support
+      enabled: true
       leaseDuration: 120s
       leaseRenewDeadline: 60s
       leaseRetryPeriod: 1s
