--- a/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-l2.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/config/cilium-l2.yaml
@@ -5,7 +5,7 @@ kind: CiliumL2AnnouncementPolicy
 metadata:
   name: policy
 spec:
-  loadBalancerIPs: false # temporarily disable due to instability
+  loadBalancerIPs: true # temporarily disable due to instability
   interfaces:
     - ^enp.*
     - ^eno[0-9]+
