--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -33,7 +33,7 @@ spec:
     bpf:
       masquerade: true
     bgp:
-      enabled: false
+      enabled: false # unifi gateway does not support this
       announce:
         loadbalancerIP: true
     cluster:
