remove this too

--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-secondary.yaml
@@ -70,7 +70,7 @@ spec:
         annotations:
           io.cilium/lb-ipam-ips: ${SECONDARY_DNS_IP}
           # metallb.universe.tf/loadBalancerIPs: ${SECONDARY_DNS_IP}
-        externalTrafficPolicy: Local # aparently, quite important
+        # externalTrafficPolicy: Local # aparently, quite important
         ports:
           dns-tcp:
             enabled: true
