increase k8s client rate limits

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -99,6 +99,9 @@ spec:
     loadBalancer:
       algorithm: maglev
       mode: dsr
+    k8sClientRateLimit:
+      qps: 20
+      burst: 40
     localRedirectPolicy: true
     operator:
       rollOutPods: true
