get explicit with devices

--- a/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/kube-system/cilium/app/helm-release.yaml
@@ -99,6 +99,10 @@ spec:
     loadBalancer:
       algorithm: maglev
       mode: dsr
+    devices:
+      - eth+
+      - eno+
+      - enp+
     k8sClientRateLimit:
       qps: 20
       burst: 40
