--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: app-template
-      version: 2.6.0
+      version: 3.1.0
       sourceRef:
         kind: HelmRepository
         name: bjw-s-charts
@@ -40,55 +40,57 @@ spec:
   maxHistory: 3
   values:
     controllers:
-      main:
+      blocky-primary:
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/0xerr0r/blocky
               tag: v0.23
-              probes:
-                liveness:
-                  failureThreshold: 5
-                  periodSeconds: 10
-                readiness:
-                  failureThreshold: 5
-                  periodSeconds: 10
-                startup:
-                  initialDelaySeconds: 5
-                  failureThreshold: 30
-                  periodSeconds: 10
+            probes:
+              liveness:
+                enabled: true
+                custom: true
+                spec:
+                  tcpSocket:
+                    port: &port 53
+                  initialDelaySeconds: 15
+                  periodSeconds: 30
+                  failureThreshold: 3
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities:
+                add:
+                  - NET_BIND_SERVICE
+                drop:
+                  - ALL
     service:
-      main:
-        enabled: true
+      app:
+        controller: *app
+        nameOverride: *app
         ports:
           http:
             port: 4000
       dns:
-        enabled: true
-        controller: main
+        controller: *app
         type: LoadBalancer
         annotations:
           io.cilium/lb-ipam-ips: ${PRIMARY_DNS_IP}
-          # metallb.universe.tf/loadBalancerIPs: ${PRIMARY_DNS_IP}
-        # externalTrafficPolicy: Local # aparently, quite important
         ports:
           dns-tcp:
-            enabled: true
-            port: 53
+            port: *port
             protocol: TCP
-            targetPort: 53
           dns-udp:
-            enabled: true
-            port: 53
+            port: *port
             protocol: UDP
-            targetPort: 53
     serviceMonitor:
       main:
-        enabled: true
+        serviceName: *app
         endpoints:
-          - interval: 30s
+          - port: http
+            scheme: http
             path: /metrics
-            port: http
+            interval: 1m
             scrapeTimeout: 10s
     persistence:
       config:
