fix for blocky app-template

--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
@@ -96,8 +96,7 @@ spec:
       config:
         enabled: true
         type: configMap
-        name: blocky
-        readOnly: true
+        name: *app
         advancedMounts:
           main:
             main:
