try using globalmounts instead

--- a/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
+++ b/kubernetes/cluster0/apps/networking/blocky/app/helm-release-primary.yaml
@@ -97,8 +97,7 @@ spec:
         enabled: true
         type: configMap
         name: *app
-        advancedMounts:
-          main:
-            main:
-              - path: /app/config.yml
-                subPath: config.yml
+        globalMounts:
+          - path: /app/config.yml
+            subPath: config.yml
+            readOnly: true
