try defulting to rule syntax v2 for traefik

--- a/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/networking/traefik/app/helm-release.yaml
@@ -43,6 +43,8 @@ spec:
     # experimental:
     #   plugins:
     #     enabled: true
+    core:
+      defaultRuleSyntax: v2
     rbac:
       enabled: true
     ingressClass:
