--- a/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
+++ b/kubernetes/cluster0/apps/auth/authelia/app/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   chart:
     spec:
       chart: authelia
-      version: 0.9.0-beta2
+      version: 0.8.58
       sourceRef:
         kind: HelmRepository
         name: authelia-charts
