--- a/kubernetes/cluster0/apps/networking/cloudflared/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/kustomization.yaml
@@ -5,3 +5,11 @@ resources:
   - ./dns-endpoint.yaml
   - ./secret.sops.yaml
   - ./helm-release.yaml
+configMapGenerator:
+  - name: cloudflared-configmap
+    files:
+      - config/config.yaml
+generatorOptions:
+  disableNameSuffixHash: true
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
