--- a/kubernetes/cluster0/apps/networking/cloudflared/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./helm-release.yaml
 configMapGenerator:
   - name: cloudflared-configmap
+    namespace: networking
     files:
       - config/config.yaml
 generatorOptions:
