rename cloudflare secret

--- a/kubernetes/cluster0/apps/networking/cloudflared/app/secret.sops.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/secret.sops.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: external-dns-cloud-credentials
+    name: cloudflared-secret
     namespace: networking
 stringData:
-    credentials.json: ENC[AES256_GCM,data:CLtjdcJsbNUW+u5rD51sR9Hna/QsyYP1Gv4BIgmZknhukHLFE5crKX5LnO2CM3Bx3uKoyVhESz7hTSba/gSoTWG7+vuiLb5AgX9g1vcRPneG5qBnUPNMqAtLcIf02OT4J6BDxx3NgaeCpwLJm1bS819O+g/aCwAqWHYYRjaqMdzJGu4xnH4S3lJgZacZTxinXRgzM9zm/bqEXcxqQgZJ/50iq2GGDpr4cyTJn0DuPw==,iv:DApXVZhfN6ZJsmeuQ3xHRGe0vMl9KUjhID03nCwidfI=,tag:In3lPOdHZsxyzjxoQbV+CQ==,type:str]
-    TunnelID: ENC[AES256_GCM,data:m4+SJEy7cXUazL8V6Yvnt1YZaD6mhEuqOrB+JdfK/xID1yfo,iv:o1NAFrAxNkvE8oPHMqsV4k6PuWZNdkR8TqEzXu98224=,tag:UeBhfbwaoCU4ATUFT8AY+g==,type:str]
+    credentials.json: ENC[AES256_GCM,data:NLMn3yaH15BaiEgxhwa9haOKloqlw4kAwDlM+0V8SKrbS2S6stF0hEt9/BVSm3C0Js4cGCKHjRA0+0aqs2uGvlKDFzDmQUunOdqNboMngHQDwKOpx0J7pkpUquERJNcwGqO7jM/CrQvpmO+p6AfQdwzeD7leBzyZNMQHkuXcfiV5LSM1asCDOmrYs4cZ9ctK+HyZAGDavZoN0kx8rP0RmgxaPVHDTWMK/HG+OQU16w==,iv:eVMhbgNNMSZWGl73vRF0I79CgU9tRcCOfOgOXn/OcEs=,tag:W02SVF692bY71C9ZjVXKOw==,type:str]
+    TunnelID: ENC[AES256_GCM,data:AsxS35Mke51Ro4aT9UviErgR8d1K/VxsA+0LoH7UZQfsx9QJ,iv:+YSi+UUDZw2kuRqwCw7syUPpYsTLtlAgPYJpSlnMUAQ=,tag:2S8GSjpsAsPbKIK5B0Q6pg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age1582vh25trj6w7klwt38d44n5nr8njr8rrxxx5kcfu3y2ezx9ss3s6j24ex
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVYmlDT2V6elYyR3Bwelov
-            dWJjVW43c3ZxMWNFOHRCaVNxaDRqbDA5WGxnClh0ZWNWclJBQ3M3SE8wN1I3OXRs
-            WElpMElCa2V2T3lqV3RHcmRqbVkwRVkKLS0tIFFEOVFEbDlXSWNkcDI5SjNMYnR4
-            cnBxSnorOGN6Q0FqWDR6czluM3AwbHcKO0Tcb4zG0mCFbmOjJTIsijvR7fCxTLKS
-            oWZQMRRoHLJoA8JF76bxggmvnRD63dn11nocaQxXCk316cbdLVzVeQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwejJNQVExb050NDlpL1ZK
+            WFVzdUVhVTBacVpDMFI1dmQranJiT1p6YjJJCnR1WXdQS1RuRi83MGthYzFCRi9k
+            RVcwUzdRSnZpSzM5STJ6NkVWS3ZTb3cKLS0tIGVSSzIvWE1hYXJYVUNsN0puWVFV
+            N2ZEV2duV3hSd0Nod2VMYXF6d2NFWmcK57OyxzgH4sb9SRli/0YS5pQlYFMW9Faq
+            d2nZ7vHiqUVK8nQmYYS5450w0SIZeKuFK+9nMhILpmD/NvdY8+b+1A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-03T21:02:02Z"
-    mac: ENC[AES256_GCM,data:rDMNntMbIrWTMMqdLUkn+8Mh266dk+QhLoIDalKs3ScbSOe4EnA4CChipKj69T+VJ28/MLTZoxEbPMH2UDqyKJQ/9YiO/1xds08ps39GLZv9Mjau/OHxh9x2if6GBQ1iVgBHETvynNwsNhaQOwtvWbNlUvD8KsLTWYq0w7qF4Xg=,iv:PSV/Q8zzwWDatrf5DQIfMBh08iKhbCoZWQ/y6H/6svc=,tag:E+zLHxbUM0jq6EKeKvf93g==,type:str]
+    lastmodified: "2024-05-03T21:18:29Z"
+    mac: ENC[AES256_GCM,data:gJetDxAKu91M3T8l0TpM2wra3vBheZsNoV/WHt6WgjconUT2xo0YRRlR5BF08TWM3hJx1WEnclwfmMpu5Q3tp7roMEbHUl+zyLT2RdMdnEkkNBvLOP7+uipEAKiu9Qnceoc9dYPQnH1/+ivQnqwPPW/t8PBIIV7sM9CtJI4zMz8=,iv:swteOXm9S9fDn8KpdfWaYp2nFO3Yj2gvGB7KqFvemwo=,tag:WCTdmj6gKaTuxME07r3AQQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
