--- a/kubernetes/cluster0/apps/networking/cloudflared/app/config/config.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/config/config.yaml
@@ -8,3 +8,4 @@ ingress:
     service: https://traefik.network.svc.cluster.local:443
     originRequest:
       originServerName: tun.${SECRET_DOMAIN}
+  - service: http_status:404
