--- a/kubernetes/cluster0/apps/networking/cloudflared/app/kustomization.yaml
+++ b/kubernetes/cluster0/apps/networking/cloudflared/app/kustomization.yaml
@@ -5,12 +5,12 @@ resources:
   - ./dns-endpoint.yaml
   - ./secret.sops.yaml
   - ./helm-release.yaml
-configMapGenerator:
-  - name: cloudflared-configmap
-    namespace: networking
-    files:
-      - config/config.yaml
-generatorOptions:
-  disableNameSuffixHash: true
-  annotations:
-    kustomize.toolkit.fluxcd.io/substitute: disabled
+# configMapGenerator:
+#   - name: cloudflared-configmap
+#     namespace: networking
+#     files:
+#       - config/config.yaml
+# generatorOptions:
+#   disableNameSuffixHash: true
+#   annotations:
+#     kustomize.toolkit.fluxcd.io/substitute: disabled
